fixattu logoslider by logichunt.com -plugarin z-index bugi. Ei vitussa kuulu tänne mut unlucky

--- a/style.scss
+++ b/style.scss
@@ -29,3 +29,9 @@ Version: 0.1
 
 @import "sass/typography";
 
+
+// Fixes partners container from "Logo Slider by LogicHunt.com"-plugin
+// going over menu when scrolled. For sure doesn't belong here. Yikes.
+.owl-carousel {
+  z-index: unset;
+}
